css/style.css
body,
*,
*:before,
*:after {
	box-sizing: border-box;
}

html {
	font-size: 32px;
}

body {
	background-color: #E4E0D8;
}

.main-content {
	position: relative;
	top: 0;
}

h2,
span,
.button a,
.button2 a {
	font-family: sans-serif;
}

h1 {
	display: none;
}

h2 {
	font-weight: bold;
	color: #401F51;
	font-size: 1.3rem;
}

p {
	border: 1px solid #000000;
	padding: 1rem;
	margin: 10px;
	width: 30%;
	font-size: 0.75rem;
	text-align: center;
}

a {
	color: #F9F6EE;
	font-weight: bold;
	text-decoration: none;
	font-size: 0.5rem;
}

a:hover {
	color: #CCA3DC;
}

a:active {
	color: #B7C18F;
}

.main-content {
	position: static;
	top: 0rem;
}


.buttonGroup {
	display: flex;
	align-items: center;
	justify-content: center;
}




.button,
.button2 {
	display: flex;
	border-radius: 4px;
	flex: 2 1 auto;
	background-color: #15342C;
	color: #B7C18F;
	margin: .30rem;
	padding: .8rem .4rem .8rem .4rem;
	opacity: 1;
	font-size: .5rem;
	width: 25%;
	height: auto;
	float: center;
	justify-content: center;
	box-shadow: 4px 5px 2px gray;
}

.button:hover,
.button2:hover,
.button a:hover,
.button2 a:hover {
	background-color: #401F51;
	color: white;
	font-weight: bold;
	text-decoration: none;
}

/*
.button a {
	float: left;
	margin-left: 1rem;
}
	
.button2 a {
	float: right;
	margin-right: 1rem;
}
*/

span::after {
	content: "\a";
	white-space: pre;
}

span {
	display: inline-block;
	max-width: 80%;
	font-size: .6rem;
	color: 1C1C1C;
	text-align: center;
	margin-bottom: .5rem;
}

.striking {
	color: #1C1C1C;
	font-size: .7rem;
	font-weight: bold;
	margin-bottom: .5rem;
	margin-top: .5rem;
	margin-left: .15rem;
}

.center {
	text-align: center;
}

@media only screen and (max-width: 1160px) {

	.button,
	.button2 {
		flex: 2 1 auto;
		float: none;
		padding: 1rem .75rem 1rem .75rem;
		max-width: 100%;
		height: auto;
		align-content: center;
		text-align: center;
	}
}

@media only screen and (max-width: 920px) {

	.button,
	.button2 {
		padding: .6rem .3rem .6rem .3rem;
	}
}

@media only screen and (max-width: 897px) {
	.main-content {
		top: 0rem;
	}

	.buttonGroup {
		display: flex;
		align-items: center;
		justify-content: center;
	}

	.button,
	.button2 {
		flex: auto;
		space-between: .05rem;
		border-radius: 3px;
		font-size: .5rem;
		text-align: center;
		max-width: 100%;
		height: auto;
		padding: .5rem .3rem .5rem .3carem;
	}
}

@media only screen and (max-width: 870px) {

	.button,
	.button2 {
		padding: 2%;
		margin: .2rem;
	}
}

@media only screen and (max-width: 813px) {
	.button,
	.button2 {
		padding: 1.5%;
		margin: .1rem;
	}
}


@media only screen and (max-width: 785px) {
	.button,
	.button2 {
		padding: 4%;
		margin: 1rem;
}
}

@media only screen and (max-width: 680px) {

	h2 {
		font-size: 1rem;
	}

	.striking {
		font-size: .75rem;
		margin-bottom: .3rem;
		margin-top: .3rem;
		margin-left: .15rem;
	}

	span {
		font-size: .6rem;
	}

	.main-content {
		top: 2.3rem;
	}

	.buttonGroup {
		display: flex;
		align-items: center;
		justify-content: stretch;
	}


	.button,
	.button2 {
		diplay: flex;
		flex: auto;
		border-radius: 3px;
		margin-top: .4rem;
		padding-top: .75rem;
		padding-bottom: .75rem;
		padding-right: 6%;
		padding-left: 6%;
		font-size: .5rem;
		text-align: center;
		width: 100%;
		height: auto;
	}
}


@media only screen and (max-width: 505px) {
	.button,
	.button2 {
		padding: 4%;
}
}

@media only screen and (max-width: 395px) {
	.button,
	.button2 {
		padding: 1%;
		margin: .15rem;
	}
}
/*=================================
Header
=================================*/

header {
	position: fixed;
	z-index: 100;
	width: 100%;
	background-color: #454545;
}

/*
a .logo {
	position: center;
	display: block;
	overflow: hidden;
	position: absolute !important;
	border: 0 !important;
	padding-left: .5rem;
	padding-top: .6rem;
	margin: 0 !important;
	color: #F9F6EE;
	font-family: "Outfit", sans-serif;
	text-transform: uppercase;
	font-size: 1rem;
	font-weight: bold;
	display: inline-block;
}
*/

.logo {
	float: left;
	display: block;
	margin-left: 1rem;
	margin-right: auto;
	padding-top: .5rem;
	padding-bottom: .5rem;
	width: 12.5%;
	max-height: 5%;
}

.navigation-bar {
	width: 100%;
	margin: auto;
}

.head-nav {
	float: right;
	text-transform: uppercase;
	padding-top: 2.3%;
	padding-bottom: 2%;
}

.head-nav li {
	margin-right: 3rem;
	display: inline-block;
	color: #F9F6EE;
}

@media only screen and (min-width: 680px) {
	.mobile ul {
		display: none;
	}
}

@media only screen and (max-width: 680px) {
	.head-nav ul {
		display: none;
	}

	header .content {
		padding: .5rem 0;
	}

	.mobile ul {
		display: left;
		align-items: left;
		width: 100%;
	}

	.logo {
		display: none;
	}
}

/*===================================
CTA
===================================*/

#sign-up-section {
	display: flex;
	justify-content: flex-start;
	align-items: flex-start;
	background-image: url("../images/ice-cream.jpg");
	background-position: top;
	background-size: cover;
	background-repeat: no-repeat;
	width: auto;
	height: auto;
	position: relative;
	padding-bottom: .71rem;
}

#sign-up-cta {
	display: block;
	position: relative;
	background-color: hsla(44, 48%, 95%, 85%);
	top: 4rem;
	padding: .75rem .4rem .75rem .4rem;
	max-width: 40%;
	max-height: auto;
	margin-bottom: 4rem;
	margin-left: 3rem;
	border-radius: 0.125rem;
}

@media only screen and (max-width: 1060px) {
	#sign-up-cta {
		justify-content: center;
		max-width: 65%;
		height: auto;
		margin-left: 1rem;
		top: 3.5rem;
	}
}

@media only screen and (max-width: 680px) {

	#sign-up-section {
		justify-content: center;
		align-items: start;
		background-image: none;
		background-position: top;
		width: auto;
		height: auto;
		position: relative;
		padding-bottom: 0;
	}

	#sign-up-cta {
		margin-top: 0rem;
		top: 0;
		padding: 1rem 0 .5rem 0;
		max-width: 100%;
		margin-bottom: 0;
		margin-left: 0;
		border-radius: 0;
	}

	.hero {
		justify-content: center;
		align-items: start;
	}
}

@media only screen and (max-width: 420px) {

	#sign-up-section {
		justify-content: center;
		align-items: start;
		background-image: none;
		background-position: top;
		width: auto;
		height: auto;
		position: relative;
		padding-bottom: 0;
	}

	#sign-up-cta {
		margin-top: 0rem;
		top: 0;
		padding: 1rem 0 .5rem 0;
		max-width: 100%;
		margin-bottom: 0;
		margin-left: 0;
		border-radius: 0;
	}

	.hero {
		justify-content: center;
		align-items: start;
	}
}

/*====================================
Features
====================================*/

#features {
	display: flex;
/*
	column-gap: 0.75rem;
*/
	height: 5rem;	
	margin: 1rem auto 0 auto;
	width: 80%;
	background-color: #E4E0D8;
}


.image-container {
	max-height: 4rem;
	margin: 0 auto;
	position: center;
}


.feature img {
	display: flex;
	object-fit: cover;
	width: 40%;
	height: 20rem;
	margin: 0 auto;

}


.feature p {
	padding: 1.5rem 1.1rem;
	width: 100%;
	height: auto;
	font-family: sans-serif;
	min-height: 40%;
	line-height: .9rem;

}


.feature img,
.feature p {
	margin: auto;
	width: 100%;
	padding-bottom: 0.5rem;
}
*/

/*====================================
Community
====================================*/

#community {
	display: flex;
	position: static;
	margin-bottom: .75rem;
	align-items: center;
	align-content: center;
	margin-left: 10%;
	margin-right: .15rem;
}


#community .community-container {
	display: flex;
	justify-content: center;
	margin-top: .70rem;
	width: 90%;
}

#community .community-container p {
	border: 1px solid #000000;
	font-size: 0.75rem;
	text-align: center;
	font-family: sans-serif;
	align-content: center;
	width: 60%;
	height: auto;

}

#community img {
	display: flex;
	margin: 0 auto;
	width: 100%;
	height: auto;
	overflow: hidden;
	object-fit: cover;
	padding-top: .3rem;
	padding-bottom: .15rem;
}

.community-sign-up {
	margin-right: .25rem;
	width: 40rem;
}

/*===================================
Footer
===================================*/

.page-footer {
	background-color: #454545;
	width: 100%;
	margin: auto;
}

.page-footer-content {
	display: inline-block;
}

footer li {
	float: left;
	display: block;
	margin-left: 1rem;
	padding-top: 1rem;
	padding-bottom: 1rem;
	color: #F9F6EE;
	background-color: #454545;
}

.copyright {
	border: none;
	position: absolute;
	right: 0;
	float: right;
	font-size: .5rem;
	text-align: right;
	color: #F9F6EE;
	background-color: #454545;
}

